[UPDATE] Added clickable logo + removed media

--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -154,7 +154,14 @@ display: flex;
   /* Cosmetics */
 }
 
-.header__logo img {
+.header__logo a {
+  /* Allocate space */
+  height: 100%;
+  /* Formatting */
+  /* Cosmetics */
+}
+
+.header__logo a img {
   /* Allocate space */
   height: 100%;
   /* Formatting */
