--- a/ACM_General/home/templates/home/media.html
+++ b/ACM_General/home/templates/home/media.html
@@ -15,7 +15,15 @@
       <div class="m-p-g">
         <div class="m-p-g__thumbs" data-google-image-layout
              data-max-height="350">
-          <img src="{% static "/home/img/media/ctf.jpg" %}"
+          <br />
+          <br />
+          <br />
+          <h1 style="text-align: center">Temporarily Unavailable</h1>
+          <br />
+          <br />
+          <br />
+          {# Removed awaiting approval of people in media #}
+          <!--<img src="{% static "/home/img/media/ctf.jpg" %}"
                data-full="{% static "/home/img/media/ctf.jpg" %}"
                class="m-p-g__thumbs-img"/>
           <img src="{% static "/home/img/media/ctf_1.jpg" %}"
@@ -38,7 +46,7 @@
                class="m-p-g__thumbs-img"/>
           <img src="{% static "/home/img/media/icpc.jpg" %}"
                data-full="{% static "/home/img/media/icpc.jpg" %}"
-               class="m-p-g__thumbs-img"/>
+               class="m-p-g__thumbs-img"/>-->
         </div>
 
         <div class="m-p-g__fullscreen"></div>
