--- a/ACM_General/home/static/home/scss/gridmain.scss
+++ b/ACM_General/home/static/home/scss/gridmain.scss
@@ -160,7 +160,14 @@ header {
   /* Cosmetics */
 }
 
-.header__logo img {
+.header__logo a {
+  /* Allocate space */
+  height: 100%;
+  /* Formatting */
+  /* Cosmetics */
+}
+
+.header__logo a img {
   /* Allocate space */
   height: 100%;
   /* Formatting */
