[UPDATE] Most recent event + setup update for failing auto-deploy

--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -24,32 +24,16 @@
     <div class="event-wrapper">
       <div class="event-card">
         <a
-          href="{% static "../../static/home/img/index/2017-4-15 Programming Cup.png" %}"
+          href="{% static "/home/img/index/sigdotcom-Intro_Meeting_FlyerQR.png" %}"
           class="flier-space">
           <img
-            src="{% static "../../static/home/img/index/2017-4-15 Programming Cup.png" %}"/>
+            src="{% static "/home/img/index/sigdotcom-Intro_Meeting_FlyerQR.png" %}"/>
         </a>
         <div class="flier-info">
-          <h2>SIG-Comp Presents: ACM Programming Cup</h2>
-          <p>Test your programming might against other S&T students battling for greatness in the ACM Programming Cup. See the flier for more details.</p>
-          <div><a href="mailto:acm@mst.com?Subject=ACM Sponsorship"
+          <h2>SIG.com: Interest Meeting</h2>
+          <p>Want to help develop the site you are currently looking at or explore other interesting web development topics? Check out SIG.com's first interest meeting and learn what we are all about!</p>
+          <div><a href="mailto:acm@mst.com?Subject=SIG.com Interest Meeting"
                   class="acm-btn">Learn More</a></div>
-        </div>
-      </div>
-    </div>
-    <div class="event-wrapper">
-      <div class="event-card">
-        <a
-          href="{% static "../../static/home/img/index/2017-04-19-Cantenna.png" %}"
-          class="flier-space">
-          <img
-            src="{% static "../../static/home/img/index/2017-04-19-Cantenna.png" %}"/>
-        </a>
-        <div class="flier-info">
-          <h2>SIG-Security Presents: Cantenna Build</h2>
-          <p>Build a directional, external antenna for your computer out of a metal can! Then, bring your new cantenna to the wireless security audit on April 20th where we race around Rolla searching for unsecured wireless networks. Everyone is welcome, but ACM members get priority.</p>
-          <div><a href="https://acmsigsec.mst.edu/talks.html" class="acm-btn">Learn
-            More</a></div>
         </div>
       </div>
     </div>
