[UPDATE] Updating robots to allow archiving + adding link to main ACM page

--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -135,6 +135,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
       <a href="{% url "home:calendar" %}">Calendar</a>
       <a href="{% url "home:media" %}">Media</a>
       <a href="{% url "home:officers" %}">Officers</a>
+      <a href="https://www.acm.org/">About ACM</a>
     </div>
     <h5>@ 2017 Missouri S&T SIG.com. All rights reserved.</h5>
   </footer>
