ADDED SIGs page

--- a/ACM_General/home/templates/home/sigs.html
+++ b/ACM_General/home/templates/home/sigs.html
@@ -10,6 +10,15 @@
 
 {% block body_content %}
   <main>
-    
+   <div class="content-wrapper">
+     <ul class="sigs">
+       <li class="sigs__sig" style="background-image: url({% static "home/img/sigs/SIGdotCOM.png" %})">
+         <a class="sigs__link" href="http://sig.com">
+         <div class="sigs__desc">SIG.com is the only SIG focused solely on web development. They develop this very website!</div>
+         <div class="sigs__link-warn">Click anywhere to view their website!</div>
+         </a>
+       </li>
+     </ul>
+  </div>
   </main>
 {% endblock %}
