--- a/ACM_General/home/static/home/scss/sigs.scss
+++ b/ACM_General/home/static/home/scss/sigs.scss
@@ -1,104 +1,78 @@
-.nav-sponsors a span {
+.nav-sigs span {
   color: #4d4d4d !important;
 }
 
-.nav-sponsors:hover a span {
+.nav-sigs:hover a span {
   color: #4d4d4d !important;
 }
 
-.nav-sponsors:after {
+.nav-sigs:after {
   transform: scaleX(.8);
 }
-
-main .content-wrapper:nth-of-type(2) {
-  padding-top: 20px;
-}
-
-main .content-wrapper h1 {
-  margin-top: 0;
-}
-
-main .content-wrapper h2 {
-  margin: 0;
-}
-
-main .content-wrapper h2 a {
-  display: inline;
-  margin: 0;
-}
-.cards {
+.sigs {
   display: flex;
   flex-wrap: wrap;
-  list-style: none;
+  list-style:none;
   padding: 0 0 20px 0;
   justify-content: space-between;
   margin: 0 60px;
 }
 
-.cards__card {
-  margin-bottom: 1rem;
-}
-
-.card__content {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  padding: 1rem;
-}
-
-.card__image {
+.sigs__sig {
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-color: #efefef;
-  overflow: hidden;
+  flex:1 1;
   position: relative;
 }
 
-.contain {
-  background-size: contain;
+.sigs__sig:hover:after {
+  background: rgba(55,60,63,.6);
 }
 
-.card__image::before {
+.sigs__sig:hover .sigs__link {
+  opacity: 1;
+}
+
+.sigs__link {
+  text-decoration:none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 40px 20px;
+  opacity: 1;
+  transition: ease-in-out .2s all;
+}
+ 
+.sigs__desc {
+  font-size: 1.3em;
+  color: #fff;
+}
+.sigs__link-warn {
+  color: #76d3ab;
+  font-size: 1.6em;
+  padding-top: 20px;
+  font-weight: bold;
+}
+
+.sigs__sig::after {
   content: "";
   display: block;
-  padding-top: 50%;
+  padding-top: 100%;
+  transition: ease-in-out .2s all;
+  background: rgba(55,60,63,.6);
 }
 
-.card__title {
-  font-size: 1.2rem;
-  margin: 10px 0 0 0;
-}
-
-.card__link {
-  text-decoration: none;
-  color: #76d3ab;
-}
-.card__link:hover {
-  text-decoration: underline;
-}
-
-.card__text {
-  color: rgba(0, 0, 0, 0.77);
-  flex: 1 1 auto;
-  font-size: 0.865rem;
-  line-height: 1.5;
-  margin: 20px 0 0 0;
-}
 
 @media (min-width: 641px) {
-  .cards__card {
+  .sigs__sig {
     flex: 0 1 calc(50% - 1em);
   }
-  .cards {
-    margin: 0 40px;
+  .sigs__link {
+    opacity: 0;
   }
-}
-@media (min-width: 1040px) {
-  .cards__card {
-    flex: 0 1 calc(33.333333333% - 1em);
-  }
-  .cards {
-    margin: 0;
+  .sigs__sig:after {
+    background: none;
   }
 }
