--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -69,7 +69,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
           <a href="{% url "home:index" %}">Home</a>
         </li>
         <li>
-          <a href="{% url "home:index" %}">SIGs</a>
+          <a href="{% url "home:sigs" %}">SIGs</a>
         </li>
         <li>
           <a href="{% url "home:sponsors" %}">Sponsors</a>
@@ -102,7 +102,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
         </li>
         <li class="nav-sigs nav-button">
           <a href="{% url "home:sigs" %}" title="SIGs">
-            <img src="{% static "home/img/core/sponsors-icon.png" %}"/>
+            <img src="{% static "home/img/core/sigs-icon.png" %}"/>
             <span>SIGs</span>
           </a>
         </li>
