ADDED logos for sigs, CHANGED design of SIGs page to match sponsors, text size on sponsors page.

--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -26,7 +26,7 @@
         <li class="cards__card">
             <a href="http://tradebot.com/" class="card__link">
             <div class="card__image contain"
-                 style="background-image: url({% static "home/img/sponsors/tradebot_logo.png" %})"></div>
+                 style="background-image: url({% static "home/img/sponsors/tradebot_logo.png" %});"></div>
               <h5 class="card__title">Tradebot | Sponsor</h5>
               </a>
               <p class="card__text">Tradebot Systems, Inc. is one of the largest
@@ -37,7 +37,7 @@
         <li class="cards__card">
           <a href="https://www.garmin.com/" class="card__link">
             <div class="card__image"
-                 style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
+                 style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %});"></div>
               <h5 class="card__title">Garmin | Sponsor</h5>
               </a>
               <p class="card__text">Garmin Ltd. (shortened to Garmin) is an
@@ -49,7 +49,7 @@
         <li class="cards__card">
             <a href="https://www.att.com/" class="card__link">
               <div class="card__image contain"
-                 style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %})"></div>
+                 style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %});"></div>
               <h5 class="card__title">AT&T | Donor</h5>
           </a>
               <p class="card__text">AT&T Inc. is an American multinational
@@ -63,7 +63,7 @@
             <a href="https://www.up.com/"
                  class="card__link">
             <div class="card__image"
-                 style="background-image: url({% static "home/img/sponsors/up_logo.gif" %})"></div>
+                 style="background-image: url({% static "home/img/sponsors/up_logo.gif" %});"></div>
               <h5 class="card__title">Union Pacific | Contributor</h5>
             </a>
               <p class="card__text">The Union Pacific Railroad is a freight
