--- a/ACM_General/home/static/home/scss/sigs.scss
+++ b/ACM_General/home/static/home/scss/sigs.scss
@@ -1,4 +1,4 @@
-.nav-sigs span {
+.nav-sigs a span {
   color: #4d4d4d !important;
 }
 
@@ -9,79 +9,86 @@
 .nav-sigs:after {
   transform: scaleX(.8);
 }
-.sigs {
+
+.cards {
   display: flex;
   flex-wrap: wrap;
-  list-style:none;
-  justify-content:space-evenly;
-  margin: 0 2%;
-  padding: 0;
+  list-style: none;
+  padding: 0 0 20px 0;
+  justify-content: space-between;
+  margin: 0 60px;
 }
 
-.sigs__sig {
+.cards__card {
+  margin-bottom: 1rem;
+}
+
+.card__content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.card__image {
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-color: #efefef;
-  width: 100%;
-  height: 100%;
+  overflow: hidden;
   position: relative;
-  margin-bottom: 20px;
 }
 
-.sigs__sig:hover:after {
-  background: rgba(55,60,63,.6);
+.contain {
+  background-size: contain;
 }
 
-.sigs__sig:hover .sigs__link {
-  opacity: 1;
-}
-.sigs__sig:hover .sigs__link-warn {
-  opacity: 1;
-}
-
-.sigs__link {
-  text-decoration:none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 40px 20px;
-  opacity: 1;
-  transition: ease-in-out .2s all;
-}
- 
-.sigs__desc {
-  font-size: 1.5em;
-  color: #fff;
-}
-.sigs__link-warn {
-  color: #76d3ab;
-  font-size: 1.8em;
-  padding-top: 40px;
-  font-weight: bold;
-  text-align: center;
-  text-shadow: 0 0 2px black;
-  opacity: 0;
-  transition: ease-in-out .2s all;
-}
-
-.sigs__sig::after {
+.card__image::before {
   content: "";
   display: block;
-  padding-top: 100%;
-  transition: ease-in-out .2s all;
-  background: rgba(55,60,63,.6);
+  padding-top: 50%;
 }
 
-@media (min-width: 450px) {
-  .sigs__sig {
-    height:424px;
-    width:424px;
+.card__title {
+  font-size: 1.3rem;
+  margin: 15px 0 0 0;
+}
+
+.card__link {
+  text-decoration: none;
+  color: #76d3ab;
+}
+.card__link:hover {
+  text-decoration: underline;
+}
+
+.card__text {
+  color: rgba(0, 0, 0, 0.77);
+  flex: 1 1 auto;
+  font-size: .9rem;
+  line-height: 1.5;
+  margin: 15px 0 0 0;
+}
+
+.card__discord-link {
+  color: #2da1d8;
+  line-height: 2;
+  font-size: 1.1rem;
+}
+
+@media (min-width: 641px) {
+  .cards__card {
+    flex: 0 1 calc(50% - 1em);
   }
-  .sigs__link {
-    opacity: 0;
+  .cards {
+    margin: 0 40px;
   }
-  .sigs__sig:after {
-    background: none;
+}
+@media (min-width: 1040px) {
+  .cards__card {
+    flex: 0 1 calc(33.333333333% - 1em);
+  }
+  .cards {
+    margin: 0;
   }
 }
