--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -151,6 +151,7 @@
     <img src="{% static "core/img/mstacm-logo-trans-new.png" %}"/>
     <div class="footer-nav">
       <a href="{% url "home:index" %}">Home</a>
+      <a href="{% url "home:sigs" %}">SIGs</a>
       <a href="{% url "home:sponsors" %}">Sponsors</a>
       <a href="{% url "home:calendar" %}">Calendar</a>
       <a href="{% url "home:media" %}">Media</a>
