[UPDATE] New Sponsors

--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -38,7 +38,7 @@
           <a href="https://www.garmin.com/" class="card__link">
             <div class="card__image"
                  style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %});"></div>
-              <h5 class="card__title">Garmin | Sponsor</h5>
+              <h5 class="card__title">Garmin | Benefactor</h5>
               </a>
               <p class="card__text">Garmin Ltd. (shortened to Garmin) is an
                 American multinational technology company known for its
@@ -46,7 +46,7 @@
                 automotive, aviation, marine, outdoor, and sport activities and
                 utilities.</p>
         </li>
-        <li class="cards__card">
+        <!--<li class="cards__card">
             <a href="https://www.att.com/" class="card__link">
               <div class="card__image contain"
                  style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %});"></div>
@@ -70,7 +70,7 @@
                 hauling railroad that operates 8,500 locomotives over 32,100
                 route-miles in 23 states west of Chicago, Illinois and New
                 Orleans, Louisiana.</p>
-        </li>
+        </li>-->
       </ul>
     </div>
   </main>
