--- a/ACM_General/home/static/home/scss/officers.scss
+++ b/ACM_General/home/static/home/scss/officers.scss
@@ -23,14 +23,13 @@
 .cards__card {
   list-style: none;
   display: -ms-flexbox;
-    display: -webkit-flex;
+  display: -webkit-flex;
   display: flex;
-  height: 200px;
   margin: 1rem auto 0 auto;
 }
 .cards__card:nth-of-type(even) {
   -webkit-flex-direction: row-reverse;
-    -ms-flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
 
@@ -38,7 +37,6 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-
   -webkit-filter: contrast(70%);
   filter: contrast(70%);
   display: block;
@@ -65,4 +63,16 @@
   margin: 10px 0;
   font-size: .86rem;
   color: rgba(0,0,0,.77);
+}
+
+@media (max-width: 470px) {
+  .cards__card {
+    -webkit-flex-direction: column !important;
+    -ms-flex-direction: column !important;
+    flex-direction: column !important;
+    margin-top: 0;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
 }
