--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -14,11 +14,11 @@
    <ul class="cards">
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/core/acm.png" %})">
+      style="background-image: url({% static "home/img/officers/current/president.png" %})">
      </div>
      <div class="card__content">
       <h3 class="card__name">Eric Michalak</h3>
-      <h5 class="card__titles">President & SIG-Security Chair</h5>
+      <h5 class="card__titles">President, SIG-Security Chair</h5>
       <div class="card__text">
        Year - Senior<br>
        Length of Service - 3 Years<br>
@@ -109,11 +109,13 @@
       <h5 class="card__titles">System Administrator</h5>
       <div class="card__text">
        Year - Senior<br>
-       Length of Service - 0 Years<br>
+       Length of Service - 1 Year<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, SIG-Security, SIG-Comp
+       Involvement - ACM General, SIG-Security, SIG-Competition
       </div>
       <div class="card__links">
+        <a href="https://www.linkedin.com/in/adam-evans-626408a8/"
+           class="acm-btn">LinkedIn</a>
        <a href="mailto:ane3md@mst.edu"
         class="acm-btn">Email</a>
       </div>
