--- a/ACM_General/home/templates/home/calendar.html
+++ b/ACM_General/home/templates/home/calendar.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+<!-- {% extends 'home/base.html' %}
 {% load static %}
 
 {% block head_title %}
@@ -18,3 +18,5 @@
     </div>
   </main>
 {% endblock %}
+
+ -->
