--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -76,6 +76,11 @@ iframe:before {
   padding-top: 68%;
 }
 
+#calendar-title {
+  text-align: center;
+  color: rgba(0, 0, 0, 0.87);
+}
+
 #calendar-wrapper {
   display: block !important;
   position: relative;
