--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -78,6 +78,7 @@ iframe:before {
 
 #calendar-title {
   text-align: center;
+  font-family: RobotoLight, Sans-Serif;
   color: rgba(0, 0, 0, 0.87);
 }
 
