--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -87,7 +87,7 @@ iframe:before {
   position: relative;
   width: 100%;
   padding-top: 68%;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 iframe {
@@ -101,8 +101,10 @@ iframe {
 .agenda-wrapper {
   display: none !important;
   position: relative;
-  width: 100%;
+  width: 90%;
   height: 550px;
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 641px) {
