ADDED comments to all of main.scss, ADDED arch instructions to readme, unified page heading on index.

--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -78,8 +78,8 @@ iframe:before {
 
 .calendar-title {
   text-align: center;
-  font-family: RobotoLight, Sans-Serif;
   color: rgba(0, 0, 0, 0.87);
+  margin-top: 0;
 }
 
 .calendar-wrapper {
