--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -24,6 +24,7 @@ html {
   font-size: 1em;
   line-height: 1.4;
   font-family: RobotoRegular, sans-serif;
+  letter-spacing: -0.6px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -100,7 +101,6 @@ body {
 
 header {
   /* Allocate space */
-  //@extend .constraint-wrapper;
   width: 100%;
   height: 420px;
   padding-bottom: 45px;
@@ -112,7 +112,6 @@ header {
           #f1f1f1;
   /* Formatting */
   /* Cosmetics */
-  /*background-color: #245623;*/
   .constraint-wrapper {
     height: 100%;
   }
@@ -132,8 +131,8 @@ header {
   height: 70px;
   /* Formatting */
   display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
+  display: -webkit-flex;
+  display: flex;
   -ms-flex-align: center;
   align-items: center;
   /* Cosmetics */
@@ -171,8 +170,8 @@ display: flex;
   padding: 0 20px 20px 20px;
   /* Formatting */
   display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
+  display: -webkit-flex;
+  display: flex;
   -ms-flex-align: end;
   align-items: flex-end;
   -ms-flex-pack: end;
@@ -198,139 +197,182 @@ display: flex;
  * ========================================================================= */
 
 nav {
-
+  /* Allocate space */
   width: 86vw;
   min-width:1000px;
   height: 90px;
-
+  /* Formatting */
   position: relative;
   z-index: 10;
   margin: -45px auto 0 auto;
-
+  /* Cosmetics */
   background-color: #fff;
 }
 
 nav .nav-link-wrapper {
-  margin: -45px auto 0 auto;
-  position: relative;
-  padding: 0;
-  list-style: none;
+  /* Allocate space */
   max-width: 1000px;
   width: 100%;
   height: 100%;
+  padding: 0;
+  /* Formatting */
+  margin: -45px auto 0 auto;
+  position: relative;
+  /* Cosmetics */
+  list-style: none;
 }
 
 .nav-button {
-  float: left;
+  /* Allocate space */
   height: 100%;
-  //margin-top: -45px;
+  width: 16.666666666666666666%;
+  /* Formatting */
+  display: inline-block;
+  float: left;
   text-align: center;
+  /* Cosmetics */
   text-decoration: none;
   cursor: pointer;
-
-  display: inline-block;
-  width: 16.666666666666666666%;
 }
 
 .nav-button:hover a span {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   color: rgba(0, 0, 0, .55);
 }
 
 .nav-button:after {
-  transition: all .25s ease-in-out;
+  /* Allocate space */
+  transform: scaleX(.40);
+  /* Formatting */
   display: block;
   position: relative;
   content: '';
-  transform: scaleX(.40);
+  /* Cosmetics */
+  transition: all .25s ease-in-out;
   border-bottom: solid 3px #2da1d8;
 }
 
 .nav-button:hover:after {
+  /* Allocate space */
   transform: scaleX(1);
+  /* Formatting */
+  /* Cosmetics */
   border-bottom: solid 3px #76d3ab;
 }
 
 .nav-button a {
-  text-decoration: none;
+  /* Allocate space */
   height: 87px;
-  display: block;
   width: 100%;
+  /* Formatting */
+  display: block;
+  /* Cosmetics */
+  text-decoration: none;
 }
 
 .nav-button a * {
+  /* Allocate space */
+  /* Formatting */
   display: block;
+  /* Cosmetics */
 }
 
 .nav-button a img {
+  /* Allocate space */
   height: 48px;
   width: 48px;
+  padding-top: 10px;
+  /* Formatting */
   box-sizing: content-box;
   margin: 0 auto 0 auto;
-  padding-top: 10px;
+  /* Cosmetics */
 }
 
 .nav-button a span {
+  /* Allocate space */
+  padding-bottom: 12px;
+  /* Formatting */
+  /* Cosmetics */
   transition: all .2s ease-in-out;
   font-size: .8em;
   font-weight: bold;
   color: rgba(0, 0, 0, .42);
-  padding-bottom: 12px;
 }
 
 /* This section is for mobile menu */
 
 #menu-wrapper {
+  /* Allocate space */
+  height: 56px;
+  width: 100vw;
+  /* Formatting */
   display: none;
   z-index: 100;
-  width: 100vw;
   top: 0;
-  background: $light-footer;
-  height: 56px;
   overflow: hidden;
   position: fixed;
+  /* Cosmetics */
+  background: $light-footer;
 }
 
 label {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   cursor: pointer;
 }
 
 label:focus {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   outline: none;
 }
 
 .menu {
+  /* Allocate space */
+  height: 100%;
+  width: 240px;
+  /* Formatting */
   position: fixed;
   z-index: 1000;
   top: 0;
   left: 0;
-  background: #f1f1f1;
-  width: 240px;
-  height: 100%;
   transform: translate3d(-240px, 0, 0);
+  /* Cosmetics */
+  background: #f1f1f1;
   transition: transform 0.35s;
 }
 
 .menu label.menu-toggle {
+  /* Allocate space */
+  height: 56px;
+  width: 60px;
+  padding: 19px 18px;
+  /* Formatting */
+  display: block;
   position: absolute;
   right: -60px;
-  width: 60px;
-  height: 56px;
+  /* Cosmetics */
   line-height: 0px;
-  display: block;
-  padding: 19px 18px;
   text-indent: -9999px;
   background: $light-footer;
 }
 
 .menu span {
-  display: block;
-  width: 25px;
+  /* Allocate space */
   height: 2px;
+  width: 25px;
+  /* Formatting */
+  display: block;
   margin-bottom: 5px;
   position: relative;
+  z-index: 1;
+  /* Cosmetics */
   background: #cdcdcd;
   border-radius: 3px;
-  z-index: 1;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
@@ -338,21 +380,33 @@ label:focus {
 }
 
 #menuToggle span:first-child {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   transform-origin: 0% 0%;
 }
 
 #menuToggle span:nth-last-child(2) {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   transform-origin: 0% 100%;
 }
 
 .menu ul li > label {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   background: url(https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-right-b-128.png) 95% 50%/16px 16px no-repeat;
 }
 
 .menu ul li a, .menu ul li label {
-  display: block;
-  text-align: center;
+  /* Allocate space */
   padding: 0 20px;
+  /* Formatting */
+  display: block;
+  /* Cosmetics */
+  text-align: center;
   line-height: 56px;
   text-decoration: none;
   color: $top-text-color;
@@ -360,32 +414,50 @@ label:focus {
 }
 
 .menu ul li a:hover, .menu ul li label:hover {
-  color: #76d3ab;
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
+  color: $acm-green;
   background-color: #eee;
   font-weight:bold;
 }
 
 .menu ul {
-  margin-top: 0;
+  /* Allocate space */
   padding-left: 0;
+  /* Formatting */
+  margin-top: 0;
+  /* Cosmetics */
 }
 
 .menu ul li {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   list-style: none;
 }
 
 /* hide inputs */
 .menu-checkbox {
+  /* Allocate space */
+  /* Formatting */
   display: none;
+  /* Cosmetics */
 }
 
 /* hide navigation icon for sublabels */
 .menu .menu label.menu-toggle {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   background: none;
 }
 
 /* fade in checked menu */
 .menu-checkbox:checked + .menu {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   transform: translate3d(0, 0, 0);
   box-shadow: 0 0 8px rgba(0, 0, 0, .45);
 }
@@ -395,27 +467,34 @@ label:focus {
  * ========================================================================= */
 
 main {
+  /* Allocate space */
   padding: 20px 0 0 0;
+  /* Formatting */
+  /* Cosmetics */
   background-color: white;
 }
 
 .acm-btn {
-  display: inline-block;
-  cursor: pointer;
-  background: #76d3ab;
-  white-space: nowrap;
- color: white;
-  text-align: center;
+  /* Allocate space */
   height: 38px;
-  line-height: 38px;
   padding: 0 20px;
+  /* Formatting */
+  display: inline-block;
+  white-space: nowrap;
+  /* Cosmetics */
+  cursor: pointer;
+  background: $acm-green;
+  color: white;
+  text-align: center;
+  line-height: 38px;
   text-decoration: none;
-
   box-shadow: inset 0 -4px 0 0 #65b593;
-
   transition: .2s ease-in-out;
 }
 .acm-btn:hover {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   box-shadow: inset 0 -40px 0 0 #65b593;
 }
 
@@ -424,51 +503,70 @@ main {
  * ========================================================================= */
 
 footer {
+  /* Allocate space */
   height: 220px;
+  /* Formatting */
   -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-align: center;
   align-items: center;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  /* Cosmetics */ 
   background-color: #373C3F;
 }
 
 footer img {
-  margin: 5px 0;
-  max-height: 100px;
+  /* Allocate space */
   height: auto;
+  max-height: 100px;
   width: auto;
+  /* Formatting */
+  margin: 5px 0;
+  /* Cosmetics */
 }
 
 .footer-nav {
+  /* Allocate space */
   height: 60px;
   width: 100%;
-  white-space: nowrap;
-  flex-wrap: wrap;
+  /* Formatting */
   display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
-  -ms-flex-align: center;
+  display: -webkit-flex;
+  display: flex;
   -ms-flex-pack: center;
   justify-content: center;
+  -ms-flex-align: center;
   align-items: center;
+  flex-wrap: wrap;
+  white-space: nowrap;
+  /* Cosmetics */
+  
 }
 
 .footer-nav a {
+  /* Allocate space */
+  /* Formatting */
   margin: 0 2%;
+  /* Cosmetics */
   font-size: 14px;
   text-decoration: none;
   color: rgba(255,255,255,.8);
   transition: color .25s;
 }
 .footer-nav a:hover {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   color: rgba(255,255,255,1);
 }
 
 footer h5 {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   color: rgba(255,255,255,.6);
   font-size: 14px;
   font-weight: normal;
@@ -483,6 +581,9 @@ footer h5 {
  */
 
 .hidden {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   display: none !important;
 }
 
@@ -492,14 +593,17 @@ footer h5 {
  */
 
 .visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
+  /* Allocate space */
   height: 1px;
+  width: 1px;
+  padding: 0;
+  /* Formatting */
   margin: -1px;
   overflow: hidden;
-  padding: 0;
   position: absolute;
-  width: 1px;
+  /* Cosmetics */
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 
 /*
@@ -510,12 +614,15 @@ footer h5 {
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-  clip: auto;
+  /* Allocate space */
   height: auto;
+  width: auto;
+  /* Formatting */
   margin: 0;
   overflow: visible;
   position: static;
-  width: auto;
+  /* Cosmetics */
+  clip: auto;
 }
 
 /*
@@ -523,6 +630,9 @@ footer h5 {
  */
 
 .invisible {
+  /* Allocate space */
+  /* Formatting */
+  /* Cosmetics */
   visibility: hidden;
 }
 
@@ -531,15 +641,21 @@ footer h5 {
  */
 
 .constraint-wrapper {
-  margin: 0 auto;
+  /* Allocate space */
   width: 100%;
   max-width: 1200px;
+  /* Formatting */
+  margin: 0 auto;
+  /* Cosmetics */
 }
 
 .content-wrapper {
-  margin: 0 auto;
+  /* Allocate space */
   width: 100%;
   max-width: 1000px;
+  /* Formatting */
+  margin: 0 auto;
+  /* Cosmetics */
 }
 
 /*
@@ -575,71 +691,92 @@ footer h5 {
 @media (max-width: 414px) {
   /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
   footer {
+    /* Allocate space */
     height: 110px;
     padding-top: 15px;
+    /* Formatting */
+    /* Cosmetics */
   }
 
   footer img {
+    /* Allocate space */
+    /* Formatting */
     display: none;
+    /* Cosmetics */
   }
 }
 
 @media (max-width: 750px) {
   /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
   header {
-    margin-top: 56px;
-    padding-bottom: 0;
+    /* Allocate space */
     height: 230px;
+    padding-bottom: 0;
+    /* Formatting */
+    margin-top: 56px;
+    /* Cosmetics */
   }
 
   .header-welcome {
+    /* Allocate space */
+    /* Formatting */
+    /* Cosmetics */
     font-size: 28px;
   }
 
   nav {
+    /* Allocate space */
+    /* Formatting */
     display: none;
+    /* Cosmetics */
   }
 
   #menu-wrapper {
+    /* Allocate space */
+    /* Formatting */
     display: block;
-  }
-
-  .top-bar {
-    top: 0;
-    display: block;
+    /* Cosmetics */
   }
 
   main {
-    margin-top: 0;
+    /* Allocate space */
     padding-top: 10px;
+    /* Formatting */
+    margin-top: 0;
+    /* Cosmetics */
   }
 
   main::before {
+    /* Allocate space */
+    /* Formatting */
     display: block !important;
     content: '';
     position: relative;
     top: -12px;
+    /* Cosmetics */
     border-top: solid 4px #2da1d8;
   }
 }
 
-/*@media (max-width:961px)  { !* tablet, landscape iPad, low-res laptops ands desktops *! }*/
 @media (max-width: 1090px) {
   /* big landscape tablets, laptops, and desktops */
-
   nav .nav-link-wrapper {
+    /* Allocate space */
+    /* Formatting */
     margin: 0;
+    /* Cosmetics */
   }
 }
 
 @media (max-width:1000px) {
   nav {
+    /* Allocate space */
     width: 100%;
     min-width: 0;
+    /* Formatting */
+    /* Cosmetics */
   }
 }
-
-/*@media (min-width:1281px) { !* hi-res laptops and desktops *! }*/
 
 /* ==========================================================================
    Print styles.
@@ -655,8 +792,7 @@ footer h5 {
   *:first-line {
     background: transparent !important;
     color: #000 !important;
-    /* Black prints faster:
-                                      http://www.sanbeiji.com/archives/953 */
+    /* Black prints faster: http://www.sanbeiji.com/archives/953 */
     box-shadow: none !important;
     text-shadow: none !important;
   }
