Adding sig-game to sigs and updating officer pictures

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -102,7 +102,7 @@
 
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/core/acm.png" %})">
+      style="background-image: url({% static "home/img/officers/current/sysadmin.jpg" %})">
      </div>
      <div class="card__content">
       <h3 class="card__name">Adam Evans</h3>
@@ -166,7 +166,7 @@
 
     <li class="cards__card">
       <div class="card__image"
-       style="background-image: url({% static "home/img/core/acm.png" %})">
+       style="background-image: url({% static "home/img/officers/current/gamechair.jpg" %})">
       </div>
 
       <div class="card__content">
@@ -187,7 +187,7 @@
 
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/core/acm.png" %})">
+      style="background-image: url({% static "home/img/officers/current/loungechair.jpg" %})">
      </div>
      <div class="card__content">
       <h3 class="card__name">Cody Roberts</h3>
