--- a/ACM_General/home/templates/home/sigs.html
+++ b/ACM_General/home/templates/home/sigs.html
@@ -57,6 +57,24 @@
               competitions.</p>
               <a href="https://discord.gg/w4x3JMc" class="card__discord-link">Discord</a>
         </li>
+        <li class="cards__card">
+            <a href="http://siggame.io/" class="card__link">
+            <div class="card__image contain"
+                 style="background-image: url({% static "home/img/sigs/siggame-logo.png" %});"></div>
+              <h5 class="card__title">SIG-Game</h5>
+              </a>
+              <p class="card__text">SIG-Game is a special interest group for
+              Missouri S&T students that develops and hosts artificial
+              intelligence programming competitions on S&T's campus in Rolla,
+              Missouri. We utilize many programming languages, tools and
+              development strategies standard to the Computer Science Industry.
+              Our members gain valuable experience on one of our five
+              development teams: Arena, Game, Public Relations, Visualizer, and
+              Web. SIG-Game offers experience working on a real team, with
+              fellow students and mentors to learn and grow as a software
+              developer. We accept new members of all skill levels and majors,
+              so don't hesitate to contact us.</p>
+              <a href="https://discord.gg/Fbg4rwk" class="card__discord-link">Discord</a>
         </li>
       </ul>
     </div>
