fixed text wrapping in titles

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -19,7 +19,8 @@
      <div class="card__content">
        <div class="card_heading">
          <h3 class="card__name">Eric Michalak</h3>
-         <h5 class="card__titles">President, SIG-Security Chair</h5>
+         <h5 class="card__titles">President</h5>
+         <h5 class="card__titles">SIG-Security Chair</h5>
        </div>
       <div class="card__text">
        Year - Senior<br>
@@ -67,7 +68,8 @@
      <div class="card__content">
        <div class="card_heading">
         <h3 class="card__name">Katrina Ward</h3>
-        <h5 class="card__titles">ACM-W President, Treasurer</h5>
+        <h5 class="card__titles">ACM-W President</h5>
+        <h5 class="card__titles">Treasurer</h5>
       </div>
       <div class="card__text">
        Year - PhD<br>
@@ -140,7 +142,8 @@
       <div class="card__content">
         <div class="card_heading">
           <h3 class="card__name">Seth Kitchen</h3>
-          <h5 class="card__titles">Event Coordinator, SIG-Competition Chair</h5>
+          <h5 class="card__titles">Event Coordinator</h5>
+          <h5 class="card__titles">SIG-Competition Chair</h5>
         </div>
         <div class="card__text">
           Year - Senior<br>
