--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -10,7 +10,7 @@
     <!-- This is where upcoming events are automatically added -->
     {% include "home/upcoming-events.html" %}
     <div class="content-wrapper">
-      <h1 class="calendar-title">All Events</h1>
+      <h1 class="calendar-title" id="calendar">All Events</h1>
     	<div class="calendar-wrapper">
     		<iframe
     	  	  src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;height=100&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FChicago"
